--- a/install
+++ b/install
@@ -4,7 +4,7 @@ cd $(dirname $0)
 
 # Compatibility logic for older Anaconda versions.
 if [ "${CONDA_EXE} " == " " ]; then
-    CONDA_EXE=$((find /opt/conda/bin/conda || find ~/anaconda3/bin/conda || \
+    CONDA_EXE=$((find /opt/homebrew/anaconda3/bin/conda || find /opt/homebrew/anaconda3/bin/conda || \
 	    find /usr/local/anaconda3/bin/conda || find ~/miniconda3/bin/conda  || \
 	    find /root/miniconda/bin/conda || find ~/Anaconda3/Scripts/conda) 2>/dev/null)
 fi
