(fix) image source URL

--- a/documentation/docs/release-notes/0.35.0.md
+++ b/documentation/docs/release-notes/0.35.0.md
@@ -17,7 +17,7 @@ We made a number of improvements to the [Binance Futures](/derivative-connectors
 
 Now, the strategy allows users to select how they want to manage any positions created as a result of filled orders. Unlike spot exchanges, filling a trade on a derivatives exchange creates a long or short position that changes in value as the markets move. In addition, holding a position entails liquidation risk if the user's collaterals fall below margin requirements.
 
-![](/img/position_mgmt.png)
+![](/assets/img/position_mgmt.png)
 
 v0.34.0 added a feature that allows you to tell the bot how to manage open positions. **Profit-taking** will enable you to set spreads at which the bot will close positions to take profit, while **Trailing stop** allows you to set spreads at which the bot will close positions to prevent further losses.
 
@@ -62,7 +62,7 @@ When there are multiple tokens used to pay fees, Hummingbot now displays a list 
 
 In [#2811](https://github.com/CoinAlpha/hummingbot/pull/2811), a message will appear on the logs after starting your `amm_arb` strategy that shows you an estimated conversion rate of ETH. It only shows when you are trading in non WETH markets.
 
-![](img/ethereum-conversion.png)
+![](/assets/img/ethereum-conversion.png)
 
 ## Bug Fixes
 
