--- a/documentation/docs/release-notes/0.36.0.md
+++ b/documentation/docs/release-notes/0.36.0.md
@@ -39,7 +39,7 @@ In v0.36, we introduce the new Liquidity Mining strategy! This strategy helps us
 
 This strategy also allows users to make markets in more than one market pair on the specified exchange, boosting their liquidity mining rewards! We are planning to add more configurable parameters for more advanced users to customize the strategy further. Learn more about it here [#2871](https://github.com/CoinAlpha/hummingbot/pull/2871).
 
-![](/img/liquidity-mining-strategy.png)
+![](/assets/img/liquidity-mining-strategy.png)
 
 ## `Perpetual_market_making` improvement
 
@@ -47,7 +47,7 @@ In v0.36, we added a new feature to the perpetual market-making strategy. `stop_
 
 Hummingbot does not show the correct calculation of PnL and return % when initiating the `history` command in the previous version. A fix and enhancement were done to show the accurate calculation and output on `total PnL` and `return %` when using the `history` command. You can learn more here [#2855](https://github.com/CoinAlpha/hummingbot/pull/2855).
 
-![](/img/history-pnl.png)
+![](/assets/img/history-pnl.png)
 
 <Callout
   type="note"
@@ -58,7 +58,7 @@ Hummingbot does not show the correct calculation of PnL and return % when initia
 
 With this new `price_type`, Hummingbot will calculate the average cost of your inventory every time a buy order is filled, and all sell orders will be created at `inventory_cost` + `ask_spread`. Learn more here [#2513](https://github.com/CoinAlpha/hummingbot/pull/2513).
 
-![](/img/inventory-price-type.png)
+![](/assets/img/inventory-price-type.png)
 
 ## Local history reconciliation with exchange history for Binance
 
