(doc) new changes to titles

--- a/documentation/docs/release-notes/0.33.0.md
+++ b/documentation/docs/release-notes/0.33.0.md
@@ -1,6 +1,5 @@
----
-title: "Version 0.33.0"
----
+# Release Notes - Version 0.33.0
+
 
 ## 🌞 New AMM Arb strategy and Binance Perpetual Market Making Strategy(Beta)
 
