--- a/documentation/docs/release-notes/0.39.1.md
+++ b/documentation/docs/release-notes/0.39.1.md
@@ -1,6 +1,5 @@
----
-title: June 2021 (v0.39.1)
----
+# Release Notes - Version 0.39.1
+
 
 This release is a hotfix to version [0.39.0](/release-notes/0.39.0).
 
