--- a/documentation/docs/release-notes/0.33.1.md
+++ b/documentation/docs/release-notes/0.33.1.md
@@ -1,6 +1,4 @@
----
-title: "Version 0.33.1"
----
+# Release Notes - Version 0.33.1
 
 This release is a hotfix to version [0.33.0](/release-notes/0.33.0).
 
