(doc) updated all callouts

--- a/documentation/docs/release-notes/0.34.0.md
+++ b/documentation/docs/release-notes/0.34.0.md
@@ -1,7 +1,5 @@
 # Release Notes - Version 0.34.0
 
-
-
 ## New Exchange Connector: dYdX
 
 Hummingbot now supports [dYdX](https://dydx.exchange/) exchange! dYdX describes itself as a full-featured decentralized exchange (originating from the US) for spot and margin trading. dYdX is built on Ethereum, and launched at the beginning of May 2019 with spot and margin trading on ETH-DAI. dYdX claims to offer one of the most liquid order books across decentralized exchanges.
@@ -28,15 +26,8 @@ Terra is compatible with the [amm-arb](/strategies/amm-arb/) strategy, as well a
 
 Read more in our documentation how to use the connector [here](/protocol-connectors/terra).
 
-<Callout
-  type="warning"
-  body="Currently [dydx], [terra] and [loopring] don't work on Binary Installers. It can only be used when running Hummingbot from source or with Docker."
-  link={[
-    "/spot-connectors/dydx/",
-    "/protocol-connectors/terra",
-    "/spot-connectors/loopring/",
-  ]}
-/>
+!!! warning
+    Currently [dydx](/spot-connectors/dydx/), [terra](/protocol-connectors/terra) and [loopring](/spot-connectors/loopring/) don't work on Binary Installers. It can only be used when running Hummingbot from source or with Docker.
 
 ## Improvements to AMM Arbitrage strategy
 
@@ -80,10 +71,8 @@ For these reasons, in this release, a “heartbeat” data collection mechanism 
 
 If you have any questions, please don't hesitate to reach out to anyone from the core team via Discord or email. Thank you again for your support.
 
-<Callout
-  type="warning"
-  body="The data will be neither accessible nor sold to any third party, your personally identifiable data will not be collected."
-/>
+!!! warning
+    The data will be neither accessible nor sold to any third party, your personally identifiable data will not be collected.
 
 Learn more: https://hummingbot.io/blog/2020-12-aggregate-trade-data-collection-notification/
 
