--- a/documentation/docs/release-notes/0.36.0.md
+++ b/documentation/docs/release-notes/0.36.0.md
@@ -47,10 +47,8 @@ Hummingbot does not show the correct calculation of PnL and return % when initia
 
 ![](/assets/img/history-pnl.png)
 
-<Callout
-  type="note"
-  body="`history` for perpetual_market_making requires for the position to be closed to get the right `pnl` and return %."
-/>
+!!! note
+    `history` for perpetual_market_making requires for the position to be closed to get the right `pnl` and return %.
 
 ## Inventory average cost added as a new price_type configuration
 
