--- a/documentation/docs/release-notes/0.41.0.md
+++ b/documentation/docs/release-notes/0.41.0.md
@@ -35,11 +35,8 @@ Starting this release, users can now select KuCoin and AscendEX from the list of
 
 Run `config rate_oracle_source` in Hummingbot to change this setting.
 
-<Callout
-  type="note"
-  body="Currently, USD (default) global token does not work with Kucoin and Ascendex, you may need to change your `global_token` to USDT."
-  link={[]}
-/>
+!!! note
+    Currently, USD (default) global token does not work with Kucoin and Ascendex, you may need to change your `global_token` to USDT.
 
 ## Uniswap v3 LP Improvements
 
