(doc) minor edit

--- a/documentation/docs/release-notes/0.42.0.md
+++ b/documentation/docs/release-notes/0.42.0.md
@@ -39,4 +39,4 @@ Read more in our documentation: [Rate Limits Share Pct](/operation/rate-limits-s
 - [#3648](https://github.com/CoinAlpha/hummingbot/issues/3648) Updated `ASSET_TO_NAME_MAPPING` in `kucoin_utils.py` to fix the error when selecting BSV markets
 - [#3754](https://github.com/CoinAlpha/hummingbot/issues/3754) Fixed rate limit issues when using AscendEx connector by implementing the new multi-limit pool throttler class
 - [#3767](https://github.com/CoinAlpha/hummingbot/issues/3767) Fixed a bug with AscendEx where cancelled orders are showing as active orders using Liquidity Mining strategy
-- [#3777](https://github.com/coinalpha/hummingbot/issues/3777) Fixed orders getting stuck on 'cancelling' when using multiple orders in AscendEx connector
+- [#3777](https://github.com/coinalpha/hummingbot/issues/3777) Fixed orders getting stuck on 'cancelling' message when using multiple orders in AscendEx connector
