Fix links to executables and NDAX connector documentation

--- a/documentation/docs/release-notes/0.42.0.md
+++ b/documentation/docs/release-notes/0.42.0.md
@@ -2,7 +2,7 @@
 
 *Released on August 11, 2021*
 
-- **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.41.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.41.0.dmg)
+- **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.42.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.42.0.dmg)
 - **Install via Docker**: [Linux](https://docs.hummingbot.io/installation/linux/#install-via-docker) | [Windows](https://docs.hummingbot.io/installation/windows/#install-via-docker) | [Mac](https://docs.hummingbot.io/installation/mac/#install-via-docker) | [Raspberry Pi](https://docs.hummingbot.io/installation/raspberry/)
 
 ---
@@ -13,7 +13,7 @@
 
 They are incorporated in the province of Alberta and registered as a Money Service Business (MSB), making them subject to the Proceeds of Crime (Money Laundering) and Terrorist Financing Act (PCMLTFA) and applicable regulatory framework of the Financial Transactions and Reports and Analysis Centre of Canada (FINTRAC).
 
-Read more in our documentation: [How to use NDAX connector](/connectors/ndax)
+Read more in our documentation: [How to use NDAX connector](/spot-connectors/ndax)
 
 ## New Global Config: Rate Limits Share Pct
 
