Undo change in the link to the NDAX connector page (should not change in the new docs structure)

--- a/documentation/docs/release-notes/0.42.0.md
+++ b/documentation/docs/release-notes/0.42.0.md
@@ -13,7 +13,7 @@
 
 They are incorporated in the province of Alberta and registered as a Money Service Business (MSB), making them subject to the Proceeds of Crime (Money Laundering) and Terrorist Financing Act (PCMLTFA) and applicable regulatory framework of the Financial Transactions and Reports and Analysis Centre of Canada (FINTRAC).
 
-Read more in our documentation: [How to use NDAX connector](/spot-connectors/ndax)
+Read more in our documentation: [How to use NDAX connector](/connectors/ndax)
 
 ## New Global Config: Rate Limits Share Pct
 
