(doc)fixed several typos and syntax errors

--- a/documentation/docs/release-notes/0.41.0.md
+++ b/documentation/docs/release-notes/0.41.0.md
@@ -1,4 +1,4 @@
-# Release Notes - Version 0.41.9
+# Release Notes - Version 0.41.0
 
 
 
@@ -36,7 +36,7 @@ Starting this release, users can now select KuCoin and AscendEX from the list of
 Run `config rate_oracle_source` in Hummingbot to change this setting.
 
 !!! note
-    Currently, USD (default) global token does not work with Kucoin and Ascendex, you may need to change your `global_token` to USDT.
+    Currently, USD (default) global token does not work with Kucoin and AscendEX, you may need to change your `global_token` to USDT.
 
 ## Uniswap v3 LP Improvements
 
