(doc) fixed multiple broken links on docs

--- a/documentation/docs/release-notes/0.33.0.md
+++ b/documentation/docs/release-notes/0.33.0.md
@@ -62,4 +62,4 @@ The following connectors are now supported:
 Documentation has been revamped into two sites:
 
 - [Hummingbot Docs](https://docs.hummingbot.io/): All-related documentation on Hummingbot, including developer guides.
-- [Hummingbot Miner Docs](https://docs.hummingbot.io/miner/): All-related information and documentation on liquidity mining and Hummingbot Miner app.
+- [Hummingbot Miner Docs](https://support.hummingbot.io/hc/en-us/sections/900002130703-Documentation): All-related information and documentation on liquidity mining and Hummingbot Miner app.
