--- a/documentation/docs/release-notes/0.37.0.md
+++ b/documentation/docs/release-notes/0.37.0.md
@@ -5,7 +5,7 @@
 _Released on March 9, 2021_
 
 - **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.37.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.37.0.dmg)
-- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker)| [Raspberry Pi](/installation/raspberry/)
+- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker)| [Raspberry Pi](/installation/raspberry-pi/)
 
 ---
 
@@ -13,17 +13,17 @@ _Released on March 9, 2021_
 
 In this release, Hummingbot has added more exchanges and is planning to add a lot more exchanges this year! Hummingbot now supports [ProBit](https://www.probit.com/) connector. ProBit Exchange describes itself as a global coin-to-coin cryptocurrency exchange. ProBit Exchange only lists what it deems to be 'qualified and deserving' cryptocurrency projects. ProBit Exchange reportedly has an order matching speed of over 1.5 million orders per second and a customizable user interface. In addition, ProBit Exchange claims to provide users with the option of a hardware security key in addition to 2 Factor Authentication.
 
-ProBit is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arb/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arb/).
+ProBit is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arbitrage/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arbitrage/).
 
-Read more about how to use the ProBit connector [here](/spot-connectors/probit/).
+Read more about how to use the ProBit connector [here](/connectors/probit/).
 
 ## New Exchange Connector: Beaxy
 
 We are glad to present to you that Hummingbot now supports [Beaxy](https://beaxy.com/) exchange! Beaxy is a digital asset exchange that aims to set itself apart from others in the field by offering a feature-rich platform built from the ground up with clients of every experience level in mind.
 
-Beaxy is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arb/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arb/).
+Beaxy is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arbitrage/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arbitrage/).
 
-Read more about how to use the Beaxy connector [here](/spot-connectors/beaxy/).
+Read more about how to use the Beaxy connector [here](/connectors/beaxy/).
 
 ## New Protocol Connector: Perpetual Finance
 
@@ -31,13 +31,13 @@ In v0.37, Hummingbot has added a new protocol connector, [Perpetual Finance](htt
 
 Perpetual protocol is a decentralized protocol to trade perpetual contracts for every asset powered by a Virtual Automated Market Maker (vAMM). The project aims to create novel financial instruments by democratizing Futures and other crypto-asset derivatives.
 
-Read more about using the Perpetual Finance connector [here](/protocol-connectors/perp-fi/).
+Read more about using the Perpetual Finance connector [here](/connectors/perp-fi/).
 
 ## Introducing the new Spot Perpetual Arbitrage strategy (Beta)
 
 In v0.37, we introduce the new Spot Perpetual Arbitrage strategy! This strategy lets you arbitrage between a spot and futures exchange. The differences between the prices on the spot and futures markets before the settlement date give a good sense of the direction in which both markets would go. Prices on both futures and spots will converge as the settlement date or time approaches.
 
-This strategy aims to open a position in one direction and execute an order in the opposite direction on the spot. Learn more about the [Spot Perpetual Arbitrage](/strategies/spot-perpetual-arb/).
+This strategy aims to open a position in one direction and execute an order in the opposite direction on the spot. Learn more about the [Spot Perpetual Arbitrage](/strategies/spot-perpetual-arbitrage/).
 
 ## Improvements to Liquidity Mining strategy
 
