--- a/documentation/docs/release-notes/0.34.0.md
+++ b/documentation/docs/release-notes/0.34.0.md
@@ -6,15 +6,15 @@ Hummingbot now supports [dYdX](https://dydx.exchange/) exchange! dYdX describes 
 
 dy/dx is compatible with the [pure market making](/strategies/pure-market-making/), [cross-exchange market making](/strategies/cross-exchange-market-making/), and [arbitrage](/strategies/arbitrage/) strategies.
 
-Read more about how to use the dYdX connector [here](/spot-connectors/dydx/).
+Read more about how to use the dYdX connector [here](/connectors/dydx/).
 
 ## New Protocol Connector: Uniswap
 
 [Uniswap](https://uniswap.org/) is a protocol on Ethereum for swapping ERC20 tokens. Unlike most exchanges, which are designed to take fees, Uniswap is designed to function as a public good — a tool for the community to trade tokens without platform fees or middlemen.
 
-Uniswap is compatible with the [amm-arb](/strategies/amm-arb/) strategy, as well as user-created strategies.
+Uniswap is compatible with the [amm-arb](/strategies/amm-arbitrage/) strategy, as well as user-created strategies.
 
-Read more in our documentation how to use the connector [here](/protocol-connectors/uniswap).
+Read more in our documentation how to use the connector [here](/connectors/uniswap).
 
 ## New Protocol Connector: Terra
 
@@ -22,12 +22,12 @@ The [Terra Protocol](https://terra.money/) is the creator of the Luna Token, Ter
 
 It runs on a Tendermint Delegated Proof of Stake algorithm and Cosmos SDK. It is aimed at becoming a new worldwide financial infrastructure on which different DApps can be created.
 
-Terra is compatible with the [amm-arb](/strategies/amm-arb/) strategy, as well as user-created strategies.
+Terra is compatible with the [amm-arb](/strategies/amm-arbitrage/) strategy, as well as user-created strategies.
 
-Read more in our documentation how to use the connector [here](/protocol-connectors/terra).
+Read more in our documentation how to use the connector [here](/connectors/terra).
 
 !!! warning
-    Currently [dydx](/spot-connectors/dydx/), [terra](/protocol-connectors/terra) and [loopring](/spot-connectors/loopring/) don't work on Binary Installers. It can only be used when running Hummingbot from source or with Docker.
+    Currently [dydx](/connectors/dydx/), [terra](/connectors/terra) and [loopring](/connectors/loopring/) don't work on Binary Installers. It can only be used when running Hummingbot from source or with Docker.
 
 ## Improvements to AMM Arbitrage strategy
 
@@ -41,7 +41,7 @@ We have also simplified the installation script for the Gateway module to pull s
 
 ## Improvements to Perpetual Market Making strategy
 
-In the last release, we released the [Binance Futures connector](/derivative-connectors/binance-futures/) and an experimental [perpetual market making](https://docs.hummingbot.io/strategies/perpetual-market-making/) strategy.
+In the last release, we released the [Binance Futures connector](/connectors/binance-futures/) and an experimental [perpetual market making](https://docs.hummingbot.io/strategies/perpetual-market-making/) strategy.
 
 In this release, we have added more features to the strategy to automate created positions. Users can now set a **take profit** price as well as a **trailing stop** price for created positions.
 
