--- a/documentation/docs/release-notes/0.36.0.md
+++ b/documentation/docs/release-notes/0.36.0.md
@@ -5,7 +5,7 @@
 _Released on February 08, 2021_
 
 - **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.36.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.36.0.dmg)
-- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker)| [Raspberry Pi](/installation/raspberry/)
+- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker)| [Raspberry Pi](/installation/raspberry-pi/)
 
 ---
 
@@ -15,7 +15,7 @@ In this release, Hummingbot has added two more exchanges in its vast spectrum of
 
 AscendEX is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), and [arbitrage strategies](/strategies/arbitrage/).
 
-Read more about how to use the AscendEX connector [here](/spot-connectors/ascend-ex/).
+Read more about how to use the AscendEX connector [here](/connectors/ascend-ex/).
 
 ## New Exchange Connector: Blocktane
 
@@ -23,13 +23,13 @@ We are glad to present to you that Hummingbot now supports [Blocktane](https://b
 
 Blocktane is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), and [arbitrage strategies](/strategies/arbitrage/).
 
-Read more about how to use the Blocktane connector [here](/spot-connectors/blocktane/).
+Read more about how to use the Blocktane connector [here](/connectors/blocktane/).
 
 ## Loopring connector updated to v3 API in Hummingbot client
 
 In the previous version, Hummingbot used Loopring's v1 API, which has since been deprecated. With this update, Hummingbot will be using [Loopring's v3 API](https://docs3.loopring.io/en/). With the updated Loopring connector in this version, any existing API keys used previously in Loopring v1 API will be invalid. Users must generate new keys from the latest version of the exchange. Learn more about the change here [#2885](https://github.com/CoinAlpha/hummingbot/pull/2885).
 
-Refer to the documentation [here](/spot-connectors/loopring/#retrieving-loopring-api-keys), to update your API keys.
+Refer to the documentation [here](/connectors/loopring/), to update your API keys.
 
 ## Introducing the new Liquidity Mining Strategy (Beta)
 
