--- a/documentation/docs/release-notes/0.38.0.md
+++ b/documentation/docs/release-notes/0.38.0.md
@@ -5,7 +5,7 @@
 _Released on April 6, 2021_
 
 - **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.38.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.38.0.dmg)
-- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker)| [Raspberry Pi](/installation/raspberry/)
+- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker)| [Raspberry Pi](/installation/raspberry-pi/)
 
 ---
 
@@ -13,17 +13,17 @@ _Released on April 6, 2021_
 
 Hummingbot has added more exchanges in this release and is planning to add a lot more exchanges this year! Hummingbot now supports [DigiFinex](https://www.digifinex.com/en-ww) connector. DigiFinex is the world's top 10 crypto exchange by trading volume and liquidity, offering spot, leverage, perpetual swap trading, and fiat to crypto trading. DigiFinex is widely loved for being stable, secure, and easy to use.
 
-DigiFinex is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arb/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arb/).
+DigiFinex is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arbitrage/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arbitrage/).
 
-Read more about how to use the DigiFinex connector [here](/spot-connectors/digifinex/).
+Read more about how to use the DigiFinex connector [here](/connectors/digifinex/).
 
 ## New Exchange Connector: HitBTC
 
 We are glad to present to you that Hummingbot now supports [HitBTC](https://hitbtc.com/) exchange! HitBTC, founded in 2013 by experienced system architects and technology experts, is one of the oldest and fastest-growing crypto exchanges in existence. With an unparalleled track record of reliability, HitBTC offers clients a comprehensive range of services that are accented by our smooth order execution, state-of-the-art trading terminal, and unmatched liquidity. HitBTC exchange is the largest spot trading market in the industry, with over 800 trading pairs and 500+ spot instruments supported, including Bitcoin, Ethereum, EOS, Litecoin, Tron, and others.
 
-HitBTC is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arb/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arb/).
+HitBTC is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arbitrage/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arbitrage/).
 
-Read more about how to use the HitBTC connector [here](/spot-connectors/hitbtc/).
+Read more about how to use the HitBTC connector [here](/connectors/hitbtc/).
 
 ## New Exchange Connector CoinZoom
 
@@ -31,15 +31,15 @@ Read more about how to use the HitBTC connector [here](/spot-connectors/hitbtc/)
 
 The CoinZoom team has extensive global exchange and trading experience and proven capabilities of designing, building, and operating a global financial services company. We have “done this before” in foreign exchange markets and use our know-how to create a reliable, safe, compliant, and innovative digital currency exchange.
 
-CoinZoom is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arb/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arb/).
+CoinZoom is compatible with [pure market making](https://docs.hummingbot.io/strategies/pure-market-making/), [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/), [amm arbitrage](/strategies/amm-arbitrage/), and [spot perpetual arbitrage](/strategies/spot-perpetual-arbitrage/).
 
-Read more about how to use the CoinZoom connector [here](/spot-connectors/coinzoom/).
+Read more about how to use the CoinZoom connector [here](/connectors/coinzoom/).
 
 ## Bitmax connector changed to AscendEx
 
 We have updated Bitmax to AscendEx in line with the exchange’s change in the brand name. It has been updated in the client and also in the documentation.
 
-Learn more about it [here](/spot-connectors/ascend-ex/)
+Learn more about it [here](/connectors/ascend-ex/)
 
 ## Introducing the new Avellaneda Market Making strategy (Beta)
 
@@ -61,7 +61,7 @@ If enabled, the bot will use a real-time conversion rate from the oracle when th
 
 Rate Oracle is compatible with [cross-exchange market-making](/strategies/cross-exchange-market-making/), [arbitrage](/strategies/arbitrage/).
 
-Learn more about the feature [here](/features/rate-oracle/).
+Learn more about the feature [here](/operation/rate-oracle/).
 
 ## New global configuration: `autofill_import`
 
