--- a/documentation/docs/release-notes/0.39.0.md
+++ b/documentation/docs/release-notes/0.39.0.md
@@ -5,7 +5,7 @@
 _Released on May 18, 2021_
 
 - **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.39.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.39.0.dmg)
-- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker) | [Raspberry Pi](/installation/raspberry/)
+- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [macOS](/installation/mac/#install-via-docker) | [Raspberry Pi](/installation/raspberry-pi/)
 
 ---
 
@@ -15,13 +15,13 @@ _Released on May 18, 2021_
 
 Starting this release, Hummingbot only supports spot trading but will be expanded to include perpetuals in a future release.
 
-Read more in our documentation: [How to use FTX connector](/spot-connectors/ftx/)
+Read more in our documentation: [How to use FTX connector](/connectors/ftx/)
 
 ## New Perpetual Connector: dYdX
 
 In version 0.34 release, we shipped out the dYdX connector that supports spot trading. In addition, Hummingbot now supports perpetuals trading for [dYdX](http://trade.dydx.exchange/) exchange by using the `dydx_perpetual` connector.
 
-Read more in our documentation: [How to use dYdX Perpetual connector](/derivative-connectors/dydx-perpetual/)
+Read more in our documentation: [How to use dYdX Perpetual connector](/connectors/dydx-perpetual/)
 
 ## New Avellaneda Market Making Parameter: Volatility Sensibility
 
