--- a/documentation/docs/release-notes/0.41.0.md
+++ b/documentation/docs/release-notes/0.41.0.md
@@ -5,7 +5,7 @@
 _Released on July 15, 2021_
 
 - **Download Installer**: [Windows](https://dist.hummingbot.io/hummingbot_v0.41.0_setup.exe) | [macOS](https://dist.hummingbot.io/hummingbot_v0.41.0.dmg)
-- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [Mac](/installation/mac/#install-via-docker) | [Raspberry Pi](/installation/raspberry/)
+- **Install via Docker**: [Linux](/installation/linux/#install-via-docker) | [Windows](/installation/windows/#install-via-docker) | [Mac](/installation/mac/#install-via-docker) | [Raspberry Pi](/installation/raspberry-pi/)
 
 ---
 
@@ -15,7 +15,7 @@ _Released on July 15, 2021_
 
 The "Gate ecosystem" consists of Gate.io, Wallet.io, HipoDeFi and Gatechain, all of which were created to provide users with a secure, simple and fair trading platform as well as the ability to safeguard assets and trading information.
 
-Read more in our documentation: [How to use Gate.io connector](/spot-connectors/gate-io).
+Read more in our documentation: [How to use Gate.io connector](/connectors/gate-io).
 
 ## New Strategy : TWAP
 
