(doc) fix broken links in new-docs

--- a/documentation/docs/release-notes/0.10.0.md
+++ b/documentation/docs/release-notes/0.10.0.md
@@ -8,7 +8,7 @@ A number of users have reported seeing duplicate orders when running the pure ma
 
 ## 📝 Improved docs: Quickstart, helper scripts, and more!
 
-As part of an ongoing process to improve Hummingbot's documentation, we have re-organized the layout of our docs, added helper scripts to make using the Docker image version easier, and created a new [Quickstart guide](/quickstart) to simplify the new user experience.
+As part of an ongoing process to improve Hummingbot's documentation, we have re-organized the layout of our docs, added helper scripts to make using the Docker image version easier, and created a new [Quickstart guide](/installation/) to simplify the new user experience.
 
 ## 🛑 Renamed stop loss to kill switch
 
