--- a/documentation/docs/release-notes/0.13.0.md
+++ b/documentation/docs/release-notes/0.13.0.md
@@ -27,7 +27,7 @@ As part of our ongoing efforts to make the Hummingbot code base more understanda
 
 Hummingbot now allows you to launch Hummingbot and automatically start a previously configured strategy without requiring `config` and `start` to be run in the Hummingbot client interface.  Users can now specify the strategy, config file, and wallet details (if required for DEX trading) when launching Hummingbot, allowing for the strategy to auto-start.
 
-For more details, see here: [trading strategy autostart](https://docs.hummingbot.io/advanced/autostart/).
+For more details, see here: [trading strategy autostart](/operation/strategy-autostart/).
 
 ## Add use of API key for IDEX connector
 
