--- a/documentation/docs/release-notes/0.17.0.md
+++ b/documentation/docs/release-notes/0.17.0.md
@@ -12,7 +12,7 @@ Read more about how to use Bittrex connector with Hummingbot in the [User Manual
 
 ## 📊 New performance analysis calculation
 
-We redesigned how Hummingbot analyzes performance so that events unrelated to Hummingbot’s actions (e.g. deposits, withdrawals, manual trades) do not impact the performance calculation; percentage profit is now based solely on assets spent and acquired from trading. Refer to our document in [Performance Analysis](https://docs.hummingbot.io/operation/commands/history/) for more information.
+We redesigned how Hummingbot analyzes performance so that events unrelated to Hummingbot’s actions (e.g. deposits, withdrawals, manual trades) do not impact the performance calculation; percentage profit is now based solely on assets spent and acquired from trading. Refer to our document in [Performance Analysis](/operation/performance-history/) for more information.
 
 
 ## 📝 More developer documentation
@@ -26,7 +26,7 @@ We published a developer tutorial on building custom strategies and documentatio
 ## 📚Log file management / data storage
 
 * A separate log file will now be generated daily. When a new log file is created, if there are more than 7 files, the oldest ones will be deleted in order to limit disk storage usage.
-* AWS free tier provides 7.7GB of disk space. Ubuntu files take about 1.1 GB, Docker takes about 0.4 GB, and hummingbot image takes about 2.5 GB. This leaves about 3.7 GB for the logs and data files, which should be enough, especially now that we have set up log rotation. Refer to [Amazon Web Services](https://docs.hummingbot.io/installation/cloud/#amazon-web-services) section under Setup a Cloud Server in User Manual.
+* AWS free tier provides 7.7GB of disk space. Ubuntu files take about 1.1 GB, Docker takes about 0.4 GB, and hummingbot image takes about 2.5 GB. This leaves about 3.7 GB for the logs and data files, which should be enough, especially now that we have set up log rotation. Refer to [Amazon Web Services](/installation/cloud-servers/#amazon-web-services) section under Setup a Cloud Server in User Manual.
 
 
 ## 🐞 Other bug fixes and miscellaneous updates
