--- a/documentation/docs/release-notes/0.20.0.md
+++ b/documentation/docs/release-notes/0.20.0.md
@@ -3,7 +3,7 @@
 🚀 Welcome to `hummingbot` version 0.20.0! In this release, we mainly addressed a number of bugs. Separately from the `hummingbot` client, the team has been hard at work on the Liquidity Mining infrastructure, with campaigns on target for a mid-February launch.
 
 ## 🤖 UI Update
-* We have added a feature that allows you to encrypt and decrypt your exchange API keys. Please review `Step 3: Configure a market making bot` in our [Quickstart guide](https://docs.hummingbot.io/quickstart/configure/) for more details.
+* We have added a feature that allows you to encrypt and decrypt your exchange API keys. Please review `Step 3: Configure a market making bot` in our [Quickstart guide](https://hummingbot.io/academy/quickstart/4-create-bot/) for more details.
 
 ## 🌊⛏ Liquidity mining update
 
