--- a/documentation/docs/release-notes/0.23.0.md
+++ b/documentation/docs/release-notes/0.23.0.md
@@ -17,8 +17,8 @@ For users who want to participate, please fill out this form. We’ll reach out 
 Please refer to the following links and resources for more information:
 
 * [Hummingbot Miners](https://miners.hummingbot.io)
-* [Participation Guide](https://docs.hummingbot.io/liquidity-mining/)
-* [Liquidity Mining FAQs](https://docs.hummingbot.io/faq/liquidity-mining/)
+* [Participation Guide](https://support.hummingbot.io/hc/en-us/articles/4402940445465-Liquidity-Mining-Explained)
+* [Liquidity Mining FAQs](https://support.hummingbot.io/hc/en-us/sections/900001100046-Frequently-Asked-Questions)
 * [Liquidity Mining Policy](https://hummingbot.io/liquidity-mining-policy/)
 
 
@@ -42,7 +42,7 @@ Read more about how to use KuCoin connector in the [User Manual](https://docs.hu
 
 Instead of using the old `hummingbot_logs.yml` templates for sending logs, we now added a prompt in Hummingbot that allows users to enable or disabled sending errors logs.
 
-Read through [Logs and Logging](https://docs.hummingbot.io/advanced/logging/#error-log-collection) section of our Utilities page for more information.
+Read through [Logs and Logging](/operation/log-files/) section of our Utilities page for more information.
 
 
 ## 🤓 Developer documentation
@@ -57,9 +57,9 @@ Read through our [Developer Manual](https://docs.hummingbot.io/developers/gettin
 Here we list other recent major changes to Hummingbot docs:
 
 * Updated quickstart guide and added GIF images for visual.
-* Added instructions in [Common ‘How To’ Questions](https://docs.hummingbot.io/faq/troubleshooting/) on how to reset forgotten password, transferring files from/to WSL, and downloading a previous version of Hummingbot in Windows.
+* Added instructions in Common ‘How To’ Questions on how to reset forgotten password, transferring files from/to WSL, and downloading a previous version of Hummingbot in Windows.
 * Also added steps how to locate and map `data` folder when using Docker.
-* Added information in [Binance troubleshooting](https://docs.hummingbot.io/faq/troubleshooting/#http-status-429-and-418-return-codes) about Binance HTTP return codes 429 and 418, Binance API trading limits, and how to avoid these return codes when running Hummingbot.
+* Added information in Binance troubleshooting about Binance HTTP return codes 429 and 418, Binance API trading limits, and how to avoid these return codes when running Hummingbot.
 * More examples with images and explanation for [best bid ask jumping](https://docs.hummingbot.io/strategies/pure-market-making/#best-bid-ask-jumping) in pure market making strategy.
 
 
