--- a/documentation/docs/release-notes/0.24.0.md
+++ b/documentation/docs/release-notes/0.24.0.md
@@ -10,8 +10,8 @@ We will be launching Liquidity Mining officially on Tuesday, March 3rd, 2020 12:
 Please refer to the following links and resources for more information:
 
 * [Hummingbot Miners App](https://miners.hummingbot.io)
-* [Participation Guide](https://docs.hummingbot.io/liquidity-mining/)
-* [Liquidity Mining FAQs](https://docs.hummingbot.io/faq/liquidity-mining/)
+* [Participation Guide](https://support.hummingbot.io/hc/en-us/articles/4402940445465-Liquidity-Mining-Explained)
+* [Liquidity Mining FAQs](https://support.hummingbot.io/hc/en-us/sections/900001100046-Frequently-Asked-Questions)
 * [Liquidity Mining Policy](https://hummingbot.io/liquidity-mining-policy/)
 
 ## 📊 Minimum order amount
@@ -25,7 +25,7 @@ Here we list other recent major changes to Hummingbot docs:
 
 * Reworked Liquidity Mining section* Improved quickstart guide for Windows, macOS and Linux
 * Added information in FAQ on how to submit a feature/feedback request 
-* Added instructions in [Common ‘How To’ Questions](https://docs.hummingbot.io/faq/troubleshooting/) on how to locate the data file in Hummingbot installed via binary, checking status of multiple bots simultaneously, adding paper trade balance from inside the client, refresh Hummingbot window pane.
+* Added instructions in Common ‘How To’ Questions on how to locate the data file in Hummingbot installed via binary, checking status of multiple bots simultaneously, adding paper trade balance from inside the client, refresh Hummingbot window pane.
 
 ## 🐞 Other bug fixes
 
