--- a/documentation/docs/release-notes/0.30.0.md
+++ b/documentation/docs/release-notes/0.30.0.md
@@ -9,19 +9,19 @@ As described in feature request [#1443](https://github.com/CoinAlpha/hummingbot/
 
 This command is useful when running multiple bots sharing the same assets in an account e.g. setting a 50% USDT limit to each bot running BTC-USDT and ETH-USDT pair.
 
-Run the command `balance limit [exchange] [asset] [amount]` to do this. More information in [balance command](/operation/commands/balance/#balance-limit-exchange-asset-amount).
+Run the command `balance limit [exchange] [asset] [amount]` to do this. More information in [balance command](/operation/balance-limit/).
 
 
 ## 📜 New command: Balance Paper
 
 Adding paper trade balances can now be done easier from the Hummingbot client by running `balance paper [asset] [amount]`. Also, users can now check paper trading account balances by running `balance paper` command.
 
-For more information and sample usage, refer to [balance command](/operation/commands/balance/#balance-paper) in our documentation.
+For more information and sample usage, refer to [balance command](/operation/paper-trade/#adding-paper-trade-balance) in our documentation.
 
 
 ## 📖 New command: Order Book
 
-Users can now see the market's order book by running the [order_book](/operation/commands/order_book) command from the Hummingbot CLI while a strategy is running. 
+Users can now see the market's order book by running the [order_book](/operation/commands-shortcuts/) command from the Hummingbot CLI while a strategy is running. 
 
 By default, this command shows the top 5 bid/ask prices with order volume. It can be used with optional arguments like `--lines` to specify the number of lines to show, `--markets` and `--exchange` if running on cross-exchange and arbitrage strategy.
 
@@ -89,4 +89,4 @@ This will also allow running multiple windows of Hummingbot via binary without e
 ### Unit Testing
 * Added `test_limit_maker_rejections` and `test_limit_makers_unfilled` - to test new LIMIT_MAKER order type.
 
-See [Building Connectors](/documentation/docs/developers/connectors/tutorial.md) for details. 
+See [Building Connectors](/developers/connectors/tutorial/) for details. 
