--- a/documentation/docs/release-notes/0.33.0.md
+++ b/documentation/docs/release-notes/0.33.0.md
@@ -5,7 +5,7 @@
 
 We are excited to release not one but two strategy:
 
-- AMM Arb strategy. For more information, see the [AMM Arb strategy](/strategies/amm-arb).
+- AMM Arb strategy. For more information, see the [AMM Arb strategy](/strategies/amm-arbitrage/).
 - Binance Perpetual Market Making Strategy. See the [Perpetual Market Making Strategy](/strategies/perpetual-market-making/) for more info.
 
 ## 📊 New argument [--live]
@@ -62,4 +62,4 @@ The following connectors are now supported:
 Documentation has been revamped into two sites:
 
 - [Hummingbot Docs](https://docs.hummingbot.io/): All-related documentation on Hummingbot, including developer guides.
-- [Hummingbot Miner Docs](https://support.hummingbot.io/hc/en-us/sections/900002130703-Documentation): All-related information and documentation on liquidity mining and Hummingbot Miner app.
+- [Hummingbot Miner Docs](https://support.hummingbot.io/hc/en-us): All-related information and documentation on liquidity mining and Hummingbot Miner app.
