--- a/documentation/docs/release-notes/0.4.0.md
+++ b/documentation/docs/release-notes/0.4.0.md
@@ -14,7 +14,7 @@ As part of ongoing work to improve the user interface, we made a number of misce
 
 * Trades are now a global object, so you can use `list trades` in order to see a list of past trades performed by the bot
 * Added a `export_private_key` command to export the private key of Ethereum wallets created in Hummingbot
-* Added instructions to help users [import and export wallets](https://docs.hummingbot.io/advanced/wallet/)
+* Added instructions to help users [import and export wallets](/operation/connect-exchange/#importing-your-wallet)
 * Added a warning to inform users when they have insufficient ETH in their wallet to fund gas costs
 * Fixed a bug that prevented editing of certain strategy configuration settings
 
