--- a/documentation/docs/release-notes/0.6.0.md
+++ b/documentation/docs/release-notes/0.6.0.md
@@ -20,7 +20,7 @@ We added network status detection to our market and wallet connectors. If you ar
 
 ## 🔍 New strategy: `discovery`
 
-The [discovery](/strategies/discovery) scans markets for the best opportunities with which to apply the `arbitrage` strategy. It runs our arbitrage profitability analysis upon matching trading pairs in two different markets and displays a ranked list of trading pairs and their profitability. We plan to add support for the `cross-exchange market making` strategy soon.
+The `discovery` scans markets for the best opportunities with which to apply the `arbitrage` strategy. It runs our arbitrage profitability analysis upon matching trading pairs in two different markets and displays a ranked list of trading pairs and their profitability. We plan to add support for the `cross-exchange market making` strategy soon.
 
 ## 💻 New CLI commands: `history` and `export_trades`
 
