--- a/documentation/docs/release-notes/0.7.0.md
+++ b/documentation/docs/release-notes/0.7.0.md
@@ -16,7 +16,7 @@ Over the next few releases, we will add additional functionality that allows use
 
 ![bamboo relay](/assets/img/bamboo_relay.png)
 
-Thanks to Hummingbot user `Joshua | Bamboo Relay`, we have our first community-contributed 3rd party exchange connector! [Bamboo Relay](https://bamboorelay.com/) is a [0x open order book relayer](/connectors/0x) that offers active trading pairs in many ERC-20 Ethereum tokens, including DAI, MKR, and BAT.
+Thanks to Hummingbot user `Joshua | Bamboo Relay`, we have our first community-contributed 3rd party exchange connector! [Bamboo Relay](https://bamboorelay.com/) is a 0x open order book relayer that offers active trading pairs in many ERC-20 Ethereum tokens, including DAI, MKR, and BAT.
 
 This connector is now available as part of the core Hummingbot codebase, and all strategies should work with it. Since this is a new connector, users may encounter bugs or unexpected behavior. Please report any issues on Github or the **#support** channel in our Discord.
 
