--- a/documentation/docs/release-notes/0.9.0.md
+++ b/documentation/docs/release-notes/0.9.0.md
@@ -14,7 +14,7 @@ To get started, update Hummingbot to `v0.9.0` and use the `bounty --register` co
 
 ![](/assets/img/idex-logo.png)
 
-With 67% market share (source: [dex.watch](https://dex.watch/)), [IDEX](https://idex.market) is the most active Ethereum-based decentralized exchange currently. We have worked closely with their team over the past few weeks to build this connector.
+With 67% market share (source: dex.watch), [IDEX](https://idex.market) is the most active Ethereum-based decentralized exchange currently. We have worked closely with their team over the past few weeks to build this connector.
 
 Today, we're happy to announce that the IDEX market connector is ready for use, and all Hummingbot strategies should work on IDEX.
 
@@ -22,7 +22,7 @@ Today, we're happy to announce that the IDEX market connector is ready for use, 
 
 The [pure market making strategy](/strategies/pure-market-making/) now allows you to place multiple levels of orders on each side of the order book. This allows market makers to set different tiers of orders with different spreads and order amounts. 
 
-For information on how to use this new feature, please see the [Multiple Orders configuration](https://docs.hummingbot.io/strategies/advanced-mm/multiple-orders/) section.
+For information on how to use this new feature, please see the [Multiple Orders configuration](/market-making/order-levels/) section.
 
 ## 📈 Performance analysis in `history` command
 
