--- a/documentation/docs/release-notes/0.15.0.md
+++ b/documentation/docs/release-notes/0.15.0.md
@@ -6,7 +6,7 @@
 
 This often asked for, long-awaited feature is now released!  Users can now run Hummingbot and simulate trading strategies without executing and placing actual trades.
 
-For more information on how to configure and use this strategy, see [Paper Trading Mode](https://docs.hummingbot.io/operation/commands/paper-trade/).
+For more information on how to configure and use this strategy, see [Paper Trading Mode](/operation/paper-trade/).
 
 ## 📊 Improvements to the **pure market making** strategy
 
