--- a/documentation/docs/release-notes/0.16.0.md
+++ b/documentation/docs/release-notes/0.16.0.md
@@ -13,19 +13,19 @@ We will keep the rewards schedule the same for October.
 
 After you have placed an order, have you seen other orders respond by making their price slightly better than yours? This is called penny-jumping, and it can be a good way to ensure that your orders have the highest probability of being filled while maximizing the profit upon a fill.
 
-With pure market making strategy (in single order mode), users now have the option to automatically adjust the prices to just above top bid and just below top ask. See [this page](https://docs.hummingbot.io/strategies/advanced-mm/order-optimization/) for more information.
+With pure market making strategy (in single order mode), users now have the option to automatically adjust the prices to just above top bid and just below top ask. See [this page](/market-making/order-optimization/) for more information.
 
 ## 💵 Transaction costs in **pure_market_making** strategy
 
 We have conformed how transaction costs are handled across all strategies. By default, the pure market making strategy now incorporates transaction costs like exchange trading fees and gas costs into order prices. 
 
-This is a configurable parameter, so users can turn this behavior off if they like. See [this page](https://docs.hummingbot.io/strategies/advanced-mm/add-transaction-costs/).
+This is a configurable parameter, so users can turn this behavior off if they like. See [this page](/market-making/add-transaction-costs/).
 
 ## 📝 More developer documentation
 
 As part of our ongoing efforts to make the Hummingbot code base more understandable and easier to use for developers, we have published guidelines for community-contributed exchange connectors, as well as more documentation on the order lifecycle:
 
-* [Guidelines and expectations for community developers building exchange connectors](https://docs.hummingbot.io/developers/connectors/order-lifecycle/)
+* [Guidelines and expectations for community developers building exchange connectors](/developers/connectors/#guidelines-for-community-developers)
 * [Order lifecycle and market events for connectors](https://docs.hummingbot.io/developers/strategies/#creating-and-cancelling-orders)
 * [Changed MarketSymbolPair to MarketTradingPairTuple in strategies for creating and cancelling orders](https://docs.hummingbot.io/developers/strategies/#creating-and-cancelling-orders)
 
