--- a/documentation/docs/release-notes/0.18.0.md
+++ b/documentation/docs/release-notes/0.18.0.md
@@ -16,8 +16,8 @@ The connector is now available in Hummingbot and should work with existing strat
 Hummingbot can now be installed easily on Windows and macOS using a setup/install package that is available for download and will be updated with every new version release.
 
 Follow the links below for more information:
-* [Install via Binary on Windows](https://docs.hummingbot.io/installation/download/windows/)
-* [Install via Binary on macOS](https://docs.hummingbot.io/installation/download/macos/)
+* [Install via Binary on Windows](/installation/windows/#install-via-binary)
+* [Install via Binary on macOS](/installation/mac/#install-via-binary)
 
 
 ## 🤓 Developer usability
