--- a/documentation/docs/release-notes/0.22.0.md
+++ b/documentation/docs/release-notes/0.22.0.md
@@ -7,7 +7,7 @@
 
 By default, pure market making strategy uses the order book’s mid price to calculate limit order prices. We added a feature that allows you to use another mid price from external sources such as another exchange, data feed, or an external API.
 
-You may read through [External Pricing Source Configuration](https://docs.hummingbot.io/strategies/advanced-mm/price-source/) in the user manual for more information.
+You may read through [External Pricing Source Configuration](/market-making/external-price-source/) in the user manual for more information.
 
 
 ## 🔗 Radar Relay upgrade to 0x v3
@@ -19,10 +19,10 @@ The Radar Relay connector is broken right now because they recently moved their 
 
 Here we list recent major changes to Hummingbot docs:
 
-* Added [Liquidity Mining FAQ](https://docs.hummingbot.io/faq/liquidity-mining/) and list of upcoming campaigns
+* Added [Liquidity Mining FAQ](https://support.hummingbot.io/hc/en-us/sections/900001100046-Frequently-Asked-Questions) and list of upcoming campaigns
 * Added External Pricing Source Configuration in Pure Market Making strategy
-* Added steps in Troubleshooting section on [how to locate the data folder](https://docs.hummingbot.io/faq/troubleshooting/) where hummingbot_trades.sqlite folder is stored when running via Docker
-* Added information in Troubleshooting section about Binance [HTTP status 429 and 418 return codes](https://docs.hummingbot.io/faq/troubleshooting/)
+* Added steps in Troubleshooting section on how to locate the data folder where hummingbot_trades.sqlite folder is stored when running via Docker
+* Added information in Troubleshooting section about Binance HTTP status 429 and 418 return codes
 * Removed Bitcoin.com Exchange since this is no longer supported
 
 
