--- a/documentation/docs/release-notes/0.27.0.md
+++ b/documentation/docs/release-notes/0.27.0.md
@@ -2,7 +2,7 @@
 
 🚀 Welcome to `hummingbot` version 0.27.0! This release contains a number of new features for advanced users, along with many core stability improvements and bug fixes to the Hummingbot client.
 
-We're also starting to see more external contributions from the Hummingbot community. See [Community](/community) for more information on how to contribute to Hummingbot.
+We're also starting to see more external contributions from the Hummingbot community. See [Community](/developers/#contributing-to-hummingbot) for more information on how to contribute to Hummingbot.
 
 !!! tip "Introducing the Hummingbot Public Roadmap"
     In order to communicate the status of bug fixes and planned improvements, we recently began to publish the [Hummingbot Public Roadmap](https://github.com/CoinAlpha/hummingbot/projects/2). We will keep this page updated, so please bookmark this page to see the newest updates to the Hummingbot codebase.
@@ -11,13 +11,13 @@ We're also starting to see more external contributions from the Hummingbot commu
 
 In [#1673](https://github.com/CoinAlpha/hummingbot/pull/1673), we introduce a new parameter in the Pure Market Making (PMM) strategy: `order_tolerance_refresh_pct`. This allows you to set an tolerance level for refreshing orders, so that the bot only cancels and replaces orders if the market price has moved by more than a certain threshold.
 
-This feature should help users create more custom bots and manage exchange rate limits better. See [Order Refresh Tolerance](/strategies/advanced-mm/order-refresh-tolerance/) for more information.
+This feature should help users create more custom bots and manage exchange rate limits better. See [Order Refresh Tolerance](/market-making/order-refresh-tolerance/) for more information.
 
 ## 📊 Price Band
 
 In [#1713](https://github.com/CoinAlpha/hummingbot/issues/1713), we introduce two new parameters in the Pure Market Making (PMM) strategy: `price_ceiling` and `price_floor`. These parameters allow you set a price band within which your bot acts normally, but the bot behaves differently if the market price moves out of the band.
 
-This feature should help users express a view that the market will stay range-bound. See [Price Band](/strategies/advanced-mm/price-band/) for more information.
+This feature should help users express a view that the market will stay range-bound. See [Price Band](/market-making/price-band/) for more information.
 
 **We want to thank 🙏 community member [petrioptrv](https://github.com/petioptrv) for this contribution!**
 
@@ -37,7 +37,7 @@ To fix [#1633](https://github.com/CoinAlpha/hummingbot/pull/1633), we now use th
 
 ## 🐞 External DB Support 
 
-After [#1596](https://github.com/CoinAlpha/hummingbot/issues/1596), you can hook up the Hummingbot client to external SQL databases. See [External Database](/advanced/db-config/) for more information.
+After [#1596](https://github.com/CoinAlpha/hummingbot/issues/1596), you can hook up the Hummingbot client to external SQL databases. See [External Database](/operation/connect-exchange/#advanced-database-configuration) for more information.
 
 **We want to thank 🙏 community member [fengkiej](https://github.com/fengkiej) for this contribution!**
 
