--- a/documentation/docs/release-notes/0.28.0.md
+++ b/documentation/docs/release-notes/0.28.0.md
@@ -9,11 +9,11 @@
 
 We are excited to release a Hummingbot connector for Celo blockchain and exchange. Celo is a new Layer 1 protocol that relies upon arbitrageurs to maintain the peg on their cUSD stablecoin. Now, you can run the new `celo-arb` strategy to help stabilize their token price while arbitraging differences between centralized exchanges and the Celo blockchain.
 
-For more information, see the [celo-arb strategy page](/strategies/celo-arb) and the [Celo quickstart guide](/strategies/celo-arb/quickstart).
+For more information, see the [celo-arb strategy page](/strategies/celo-arbitrage/) and the [Celo quickstart guide](/strategies/celo-arbitrage/#setup).
 
 ## 🏓 New parameter: ping_pong
 
-We introduce a new parameter that allow your bot to alternate placing buy and sell orders, a simple way to keep your inventory levels constant. For more information, please see the [ping pong documentation page](/strategies/advanced-mm/ping-pong).
+We introduce a new parameter that allow your bot to alternate placing buy and sell orders, a simple way to keep your inventory levels constant. For more information, please see the [ping pong documentation page](/market-making/ping-pong/).
 
 **We want to thank 🙏 community member [petrioptrv](https://github.com/petioptrv) for this contribution!**
 
@@ -29,7 +29,7 @@ Past versions of Hummingbot used the CoinGecko and CoinCap public APIs to fetch 
 
 ## ☝️ Trade notifications
 
-When the Hummingbot client makes a trade, it now appends a trade notification message to the lefthand output screen. Users of the [Telegram integration](/advanced/telegram/) should also see these notifications in the Telegram interface.
+When the Hummingbot client makes a trade, it now appends a trade notification message to the lefthand output screen. Users of the [Telegram integration](/operation/telegram/) should also see these notifications in the Telegram interface.
 
 
 ## 🐞 Other Enhancements and Fixes
