--- a/documentation/docs/release-notes/0.32.0.md
+++ b/documentation/docs/release-notes/0.32.0.md
@@ -24,14 +24,14 @@ Read more about how to use Loopring connector [here](/connectors/loopring/).
 
 Advanced users can now customize and specify how Hummingbot creates orders in terms of order levels, spread and size.
 
-Since this feature is for advanced users, it is not configurable from the Hummingbot client. Follow the guide in our documentation how to use the [Order Override](/strategies/advanced-mm/order-override) feature.
+Since this feature is for advanced users, it is not configurable from the Hummingbot client. Follow the guide in our documentation how to use the [Order Override](/market-making/order-override/) feature.
 
 
 ## 📈 New price reference: Last Own Trade Price
 
 We added `last_own_trade_price` to `price_type` in pure market making to allow users use their own last trade price as a price reference when creating orders.
 
-More information in [External Pricing Source Configuration](/strategies/advanced-mm/price-source).
+More information in [External Pricing Source Configuration](/market-making/external-price-source/).
 
 
 ## 🛫 More parameters configurable on the fly
@@ -54,7 +54,7 @@ The following parameters can now be reconfigured even without stopping the strat
 
 This new command displays a specific market's ticker prices such as best bid, best ask, mid price and last trade price. By default, it runs the output 10 times with 1 second in between intervals.
 
-Optional arguments for this command and sample usage can be found in our [documentation](/operation/commands/ticker).
+Optional arguments for this command and sample usage can be found in our [documentation](/operation/commands-shortcuts/).
 
 
 ## 💻 Developers Updates
@@ -63,7 +63,7 @@ Optional arguments for this command and sample usage can be found in our [docume
 
 In the ongoing effort to make the Hummingbot code base more developer friendly, we refactored several parts of the exchange connector code to make it easier to add additional exchanges in the future:
 
-* A major update on [Task 4. Required Connector Configuration](/developers/connectors/task4.md), most of these tasks are now contained within the connector package, you no longer need to update various other files in the Hummingbot. 
+* A major update on [Task 4. Required Connector Configuration](/developers/connectors/task4/), most of these tasks are now contained within the connector package, you no longer need to update various other files in the Hummingbot. 
 
 
 ## 🔧 Other Enhancements
