--- a/documentation/docs/release-notes/0.5.0.md
+++ b/documentation/docs/release-notes/0.5.0.md
@@ -28,9 +28,9 @@ New documentation in this release includes:
 * [Strategies](/strategies): diagrams and explanations of Hummingbot's strategies
 * [Debug console](/developers/debug): how to use the debug console to inspect your bot in real-time
 * Known issues: list of currently outstanding issues and their resolution status
-* [Windows installation](/installation/docker/windows): how to install Hummingbot on Windows
-* [Exchange rates](https://docs.hummingbot.io/advanced/exchange-rates/): how to use the exchange rates utility class to resolve price differences between stablecoins
-* [Wallet import/export](https://docs.hummingbot.io/advanced/wallet/): how to import and export Ethereum wallets
+* [Windows installation](/installation/windows/): how to install Hummingbot on Windows
+* Exchange rates: how to use the exchange rates utility class to resolve price differences between stablecoins
+* [Wallet import/export](/operation/connect-exchange/#importing-your-wallet): how to import and export Ethereum wallets
 
 ## 🐞 Bug fixes and miscellaneous updates
 
