(doc) release notes fix broken links

--- a/documentation/docs/release-notes/0.40.0.md
+++ b/documentation/docs/release-notes/0.40.0.md
@@ -11,11 +11,11 @@ _Released on June 16, 2021_
 
 ## New Protocol Connector : Uniswap v3
 
-With the new version's Concentrated Liquidity, traders can control over what price ranges their capital is allocated to. In addition, Uniswap v3 allows liquidity providers to be compensated accordingly for taking on varying degrees of risk.
+With the new version's Concentrated Liquidity, traders can control over what price ranges their capital is allocated to. In addition, [Uniswap v3](https://docs.hummingbot.io/connectors/uniswap-v3/) allows liquidity providers to be compensated accordingly for taking on varying degrees of risk.
 
 ## New UniswapV3 Iteration 1 strategy
 
-### `uniswap_v3_lp`
+### [`uniswap_v3_lp`](https://docs.hummingbot.io/strategies/uniswap-v3-lp/)
 
 Create new liquidity positions and automate the process of readjusting these positions once the market price moves outside of the starting price range.
 
@@ -39,7 +39,7 @@ If you prefer manual control of orders rather than bot calculated `order_amount`
 
 ## Other Enhancements
 
-- #3017 Catch and report exceptions when importing scripts in PMM strategy in the event of syntax or module import errors
+- [#3017](https://github.com/CoinAlpha/hummingbot/issues/3017) Catch and report exceptions when importing scripts in PMM strategy in the event of syntax or module import errors
 
 - Hummingbot client unit tests for the following:
   - Performance Calculation
